--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo1.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" type="image/svg+xml" href="/logo1.png" />
     <meta name="description" content="The First DeFAi on @daosdotfun - Coming soon 🦦" />
     <meta name="keywords" content="LUTRAI, AI, DeFi, DeFAi, Blockchain, Artificial Intelligence, Web3" />
     <meta name="author" content="LUTRAI" />
